# panorama

./: README.md
harness/: Makefile  harness.c  libpanorama.h
panorama/: Cargo.toml  rustfmt.toml
panorama/src/: bitmap.rs  boot.rs  defs.rs  error.rs  event_fd.rs  fuzz.rs  gdt.rs  hypercall.rs  lib.rs  memory.rs  metrics.rs  pagetable.rs  snapshot.rs  symbols.rs  timer.rs  vm.rs  x86.rs
panorama/src/devices/: block.rs  block_backend.rs  keyboard.rs  mod.rs  serial.rs
panorama/src/mptables/: mod.rs  mpspec.rs  mptable.rs
scripts/: copy-harness.sh  create-image.sh
snap/: .gitignore  Cargo.toml
snap/src/: main.rs
